fix(styles): Adjust width of 'stuck' column in table for better layout

--- a/src/main/resources/web/assets/styles/styles.css
+++ b/src/main/resources/web/assets/styles/styles.css
@@ -84,8 +84,8 @@ th:nth-child(2), td:nth-child(2) { /* position */
 
 th:nth-child(3), td:nth-child(3) { /* stuck*/
     text-align: center;
-    width: 30px;
-    min-width: 30px;
+    width: 40px;
+    min-width: 40px;
     white-space: nowrap;
 }
 
